<resources>
    <string name="Username">Username</string>
    <string name="log_in">LogIn</string>
    <string name="app_name">iCLOCK</string>
    <string name="iclock_text">Iclock</string>
    <string name="login_password">Password</string>
    <string name="or">Or Sign in with</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Profile</string>
    <string name="nav_header_subtitle">www.iCLOCK.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="event_details">Event Details</string>
    <string name="event_name">Event Name</string>
    <string name="submit">Submit</string>
    <string name="description">Description</string>
    <string name="imp_dates">Imp Dates</string>
    <string name="contact_number_1">Contact Number 1</string>
    <string name="contact_number_2">Contact Number 2</string>
    <string name="menu_home">Home</string>
    <string name="menu_add_event">Add Events</string>
    <string name="menu_add_book">Add Books</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="events">Events</string>
    <string name="sharing">Sharing</string>
    <string name="todo">None</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Home Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="dashboard_text">Dashboard</string>
    <string name="dashboard_boook_text">Books</string>

    <string name="Welcome_to_create_Event">Enter your Event</string>
    <string name="new_user">New User? </string>
    <string name="sign_up">New USER? Sign up</string>
    <string name="events_on_college">events-on-college</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registration">Registration</string>
    <string name="register">Register</string>
    <string name="contact_number">Contact Number</string>
    <string name="college_name">College name</string>
    <string name="your_branch_name">Branch</string>
    <string name="already_registered_login_here">Already Registered? Login here</string>
    <string name="iclok">TODOi</string>
    <string name="googleimg">TODO</string>
    <string name="login">LOGIN</string>
</resources>