<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/jwwkgj"
    tools:context=".AddEventDetails">

    <TextView
        android:id="@+id/EventDetail"
        android:layout_width="173dp"
        android:layout_height="38dp"
        android:flow_horizontalAlign="center"
        android:flow_verticalAlign="top"
        android:fontFamily="@font/aclonica"
        android:text="@string/event_details"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/Event_details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.783" />

    <ScrollView
        android:id="@+id/Event_details"
        android:layout_width="408dp"
        android:layout_height="449dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/Event_Name"
                android:layout_width="match_parent"
                android:layout_height="66dp"
                android:autofillHints=""
                android:ems="10"
                android:fontFamily="@font/aclonica"
                android:hint="@string/event_name"
                android:inputType="textPersonName"
                android:textColorHint="#0A5557" />

            <EditText
                android:id="@+id/EventDescription"
                android:layout_width="match_parent"
                android:layout_height="158dp"
                android:autofillHints=""
                android:ems="10"
                android:fontFamily="@font/aclonica"
                android:gravity="start|top"
                android:hint="@string/description"
                android:inputType="textMultiLine"
                android:textColorHint="#0A5557" />

            <EditText
                android:id="@+id/EventDates"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:autofillHints=""
                android:ems="10"
                android:fontFamily="@font/aclonica"
                android:gravity="start|top"
                android:hint="@string/imp_dates"
                android:inputType="textMultiLine"
                android:textColorHint="#0A5557" />

            <EditText
                android:id="@+id/EventContact1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:fontFamily="@font/aclonica"
                android:hint="@string/contact_number_1"
                android:inputType="phone"
                android:textColorHint="#0A5557" />

            <EditText
                android:id="@+id/EventContact2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:fontFamily="@font/aclonica"
                android:hint="@string/contact_number_2"
                android:inputType="phone"
                android:textColorHint="#0A5557" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/button"
        android:layout_width="135dp"
        android:layout_height="54dp"
        android:background="@drawable/facebook_icon___copy"
        android:fontFamily="@font/aclonica"
        android:text="@string/submit"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Event_details" />

</androidx.constraintlayout.widget.ConstraintLayout>