<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signinbackground"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/Registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/registration"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.077"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.411">

        <EditText
            android:id="@+id/user_username"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginLeft="12sp"
            android:layout_marginTop="12sp"
            android:layout_marginRight="12sp"
            android:layout_marginBottom="06sp"
            android:layout_weight="2"
            android:alpha="0.8"
            android:autofillHints=""
            android:background="@drawable/shadow"
            android:drawablePadding="10sp"
            android:elevation="10sp"
            android:ems="10"
            android:fontFamily="@font/aclonica"
            android:gravity="start|center_vertical"
            android:hint="@string/Username"
            android:inputType="textPersonName"
            android:textAllCaps="false"
            android:textColorHint="#6C5757"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/user_contact_number"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginLeft="12sp"
            android:layout_marginTop="12sp"
            android:layout_marginRight="12sp"
            android:layout_marginBottom="06sp"
            android:layout_weight="2"
            android:alpha="0.8"
            android:autofillHints=""
            android:background="@drawable/shadow"
            android:drawablePadding="10sp"
            android:elevation="10sp"
            android:ems="10"
            android:fontFamily="@font/aclonica"
            android:gravity="start|center_vertical"
            android:hint="@string/contact_number"
            android:inputType="textPersonName"
            android:textAllCaps="false"
            android:textColorHint="#6C5757"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/user_college_name"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginLeft="12sp"
            android:layout_marginTop="12sp"
            android:layout_marginRight="12sp"
            android:layout_marginBottom="06sp"
            android:layout_weight="2"
            android:alpha="0.8"
            android:autofillHints=""
            android:background="@drawable/shadow"
            android:drawablePadding="10sp"
            android:elevation="10sp"
            android:ems="10"
            android:fontFamily="@font/aclonica"
            android:gravity="start|center_vertical"
            android:hint="@string/college_name"
            android:inputType="textPersonName"
            android:textAllCaps="false"
            android:textColorHint="#6C5757"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/user_password"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginLeft="12sp"
            android:layout_marginTop="12sp"
            android:layout_marginRight="12sp"
            android:layout_marginBottom="06sp"
            android:layout_weight="2"
            android:alpha="0.8"
            android:autofillHints=""
            android:background="@drawable/shadow"
            android:drawablePadding="10sp"
            android:elevation="10sp"
            android:ems="10"
            android:fontFamily="@font/aclonica"
            android:gravity="start|center_vertical"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            android:textAllCaps="false"
            android:textColorHint="#6C5757"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/user_branch"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginLeft="12sp"
            android:layout_marginTop="12sp"
            android:layout_marginRight="12sp"
            android:layout_marginBottom="06sp"
            android:layout_weight="2"
            android:alpha="0.8"
            android:autofillHints=""
            android:background="@drawable/shadow"
            android:drawablePadding="10sp"
            android:elevation="10sp"
            android:ems="10"
            android:fontFamily="@font/aclonica"
            android:gravity="start|center_vertical"
            android:hint="@string/your_branch_name"
            android:inputType="textPersonName"
            android:textAllCaps="false"
            android:textColorHint="#6C5757"
            android:textSize="18sp" />
    </LinearLayout>

    <Button
        android:id="@+id/user_register_button"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="@drawable/facebook_icon___copy"
        android:fontFamily="@font/aclonica"
        android:text="@string/register"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.78" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:fontFamily="@font/aclonica"
        android:onClick="Login"
        android:text="@string/already_registered_login_here"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_register_button" />

</androidx.constraintlayout.widget.ConstraintLayout>