<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mitsblurback"
    app:layout_constraintCircleRadius="40sp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="274dp"
        android:layout_height="145dp"
        android:contentDescription="@string/iclok"
        android:src="@drawable/iclocklogo"
        app:layout_constraintBottom_toTopOf="@+id/constraint_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.972" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout"
        android:layout_width="0dp"
        android:layout_height="225dp"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.231"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.426">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_weight="2"
            android:alpha="0.8"
            android:autofillHints=""
            android:background="@drawable/shadow"
            android:drawableStart="@drawable/user_name"
            android:drawablePadding="10sp"
            android:elevation="10sp"
            android:ems="10"
            android:fontFamily="@font/aclonica"

            android:gravity="start|center_vertical"
            android:hint="@string/Username"
            android:inputType="textEmailAddress"
            android:textAllCaps="false"
            android:textColorHint="#6C5757"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.8" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_weight="2"
            android:alpha="0.8"
            android:autofillHints=""
            android:background="@drawable/shadow"
            android:drawableStart="@drawable/lock"
            android:drawablePadding="10sp"
            android:elevation="10sp"
            android:ems="10"
            android:fontFamily="@font/aclonica"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            android:textColor="#FFFFFF"
            android:textColorHint="#6C5757"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/login_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.578"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.819" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="280dp"
            android:layout_height="53dp"
            android:layout_marginTop="20sp"
            android:layout_weight="0"
            android:background="@drawable/facebook_icon___copy"
            android:elevation="30sp"
            android:fadingEdgeLength="3sp"
            android:fontFamily="@font/aclonica"
            android:text="@string/log_in"
            android:textColor="@color/design_default_color_on_secondary"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.906" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/or_login_with"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aclonica"
        android:text="@string/or"
        android:textAlignment="center"
        android:textColor="#090000"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/signInButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraint_layout"
        app:layout_constraintVertical_bias="0.484" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/signInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10sp"
        android:paddingRight="10sp"
        android:textColor="#FDFAFA"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraint_layout"
        app:layout_constraintVertical_bias="0.301">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/common_google_signin_btn_icon_dark"
            android:contentDescription="@string/googleimg" />
    </com.google.android.gms.common.SignInButton>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInButton">

        <TextView
            android:id="@+id/register_here"
            android:layout_width="197dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aclonica"
            android:text="@string/new_user"
            android:textAlignment="center"
            android:textColor="@color/design_default_color_on_secondary"
            android:textSize="24sp"
            android:textStyle="normal" />

        <Button
            android:id="@+id/sign_up"
            android:layout_width="202dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:fontFamily="@font/aclonica"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textSize="24sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>