<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="244dp"
        android:background="@drawable/dashboard_back_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/title_dashboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aclonica"
            android:text="@string/dashboard_text"
            android:textColor="#ECE8E8"
            android:textSize="45sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/all_cards_of_dashboard"
        android:layout_width="375dp"
        android:layout_height="369dp"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="0.066">

        <LinearLayout
            android:id="@+id/event_linear_layout"
            android:layout_width="151dp"
            android:layout_height="127dp"
            android:background="@android:color/white"
            android:elevation="20sp"
            android:fadingEdgeLength="1dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.127"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.204">

            <ImageButton
                android:id="@+id/event_button"
                android:layout_width="match_parent"
                android:layout_height="88dp"
                android:layout_weight="5"
                android:background="@android:color/white"
                android:contentDescription="@string/events_on_college"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/event_icon_3" />

            <TextView
                android:id="@+id/event_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:fontFamily="@font/alfa_slab_one"
                android:text="@string/events"
                android:textAlignment="center"
                android:textSize="25sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/sahring_linear_layout"
            android:layout_width="151dp"
            android:layout_height="127dp"
            android:background="@android:color/white"
            android:elevation="20sp"
            android:fadingEdgeLength="1dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.545"
            app:layout_constraintStart_toEndOf="@+id/event_linear_layout"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.204">

            <ImageButton
                android:id="@+id/sharing_button"
                android:layout_width="match_parent"
                android:layout_height="102dp"
                android:layout_weight="5"
                android:background="@android:color/white"
                android:contentDescription="TODO"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/sharing_icon_2" />

            <TextView
                android:id="@+id/sharing_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:fontFamily="@font/alfa_slab_one"
                android:gravity="center"
                android:text="@string/dashboard_boook_text"
                android:textAlignment="center"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/moodle_button_layout"
            android:layout_width="144dp"
            android:layout_height="130dp"
            android:background="@android:color/white"
            android:elevation="20sp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/sahring_linear_layout"
            app:layout_constraintHorizontal_bias="0.486"
            app:layout_constraintStart_toStartOf="@+id/event_linear_layout"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.823">

            <ImageButton
                android:id="@+id/moodle_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@android:color/white"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/moodle_icon" />

            <TextView
                android:id="@+id/moodle_text"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_weight="1"
                android:fontFamily="@font/alfa_slab_one"
                android:paddingBottom="2sp"
                android:text="Moodle"
                android:textAlignment="center"
                android:textSize="25sp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>